# xakkep

./: .dockerignore  Dockerfile  README.en.md  README.md  app.js  index.html  package.json  railway-run.sh  styles.css
assets/: README.txt
ios/: README.md
polymarket-bot/: .env.example  README.md  docker-compose.yml  pyproject.toml
polymarket-bot/docker/: Dockerfile
polymarket-bot/docs/: blueprint.md
polymarket-bot/ops/prometheus/: prometheus.yml
polymarket-bot/sql/: 001_init.sql
polymarket-bot/src/bot/: __init__.py  codec.py  config.py  constants.py  db.py  event_bus.py  interfaces.py  metrics.py  redis_client.py  schemas.py
polymarket-bot/src/bot/execution/: __init__.py  live_clob.py
polymarket-bot/src/bot/services/: __init__.py  common.py
polymarket-bot/src/bot/services/backtest_replay/: __init__.py  main.py
polymarket-bot/src/bot/services/edge_engine/: __init__.py  main.py
polymarket-bot/src/bot/services/execution_engine/: __init__.py  main.py
polymarket-bot/src/bot/services/feature_service/: __init__.py  main.py
polymarket-bot/src/bot/services/forecast_service/: __init__.py  main.py
polymarket-bot/src/bot/services/market_ingestor/: __init__.py  main.py
polymarket-bot/src/bot/services/ops_api/: __init__.py  main.py
polymarket-bot/src/bot/services/risk_engine/: __init__.py  main.py
polymarket_edge_bot_realprice/: .env.example  .gitignore  attention_flow.py  backtest.py  build_ceasefire_manifest.py  build_diplomacy_pool.py  build_geopolitical_pool.py  build_release_pool.py  build_resume_talks_manifest.py  build_resume_talks_pool.py  (+55 more)
(+37 files in other folders)
