[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Blueprint scaffold for a modular Polymarket trading bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "eth-account>=0.13.3",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0",
  "psycopg[binary]>=3.1.19",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "redis>=5.0.4",
  "uvicorn>=0.30.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
